fixed overflow-y for nav side and edit

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,5 +78,6 @@ button {
    padding-top: 1rem;
    padding-left: 3pt;
    overflow: hidden;
+   overflow-y: scroll;
 }
 
